# Learning-Rust

./: README.md
1.2_hello-world/: main.rs
1.3_hello-cargo/: Cargo.toml
2_guessing_game/: Cargo.toml
2_guessing_game/src/: main.rs
3.1_variables/: Cargo.toml
3.1_variables/src/: main.rs
3.2_data_types/: Cargo.toml
3.2_data_types/src/: main.rs
3.3_functions/: Cargo.toml
3.3_functions/src/: main.rs
3.5_control_flow/: Cargo.toml
3.5_control_flow/src/: main.rs
4.1-2_ownership_refs_borrowing/: Cargo.toml
4.1-2_ownership_refs_borrowing/src/: main.rs
4.3_slice/: Cargo.toml
4.3_slice/src/: main.rs
5.1_structs/: Cargo.toml
5.1_structs/src/: main.rs
5.2_rectangles/: Cargo.toml
5.2_rectangles/src/: main.rs
6.1_enums/: Cargo.toml
6.1_enums/src/: main.rs
6.2_match_operator/: Cargo.toml
6.2_match_operator/src/: main.rs
