[package]
name = "hello-cargo"
version = "0.1.0"
authors = ["Ric Waltman <ric.waltman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies take the form of libraries, also known as 'CRATES' in Rust
[dependencies]
